# infinite-game-of-life

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
assets/: chart-grid-dots.afphoto
src/: app.rs  lib.rs  main.rs  universe.rs
www/: index.html  index.js  package-lock.json  package.json
