[package]
name = "infinite-game-of-life"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
fastrand = "1.8.0"
three-d = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
